cover classification data

--- a/classification_of_satellite_images/data_ready.ipynb
+++ b/classification_of_satellite_images/data_ready.ipynb
@@ -278,19 +278,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 去掉第一行和第二列并写入文件\n",
-    "d = train_data.drop(['max_ndvi'],axis=1)\n",
-    "d.head()\n",
-    "d.to_csv('train_data.csv',index='class')"
+    "train_data.to_csv('train_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -315,6 +312,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>class</th>\n",
+       "      <th>max_ndvi</th>\n",
        "      <th>20150720_N</th>\n",
        "      <th>20150602_N</th>\n",
        "      <th>20150517_N</th>\n",
@@ -323,7 +321,6 @@
        "      <th>20150330_N</th>\n",
        "      <th>20150314_N</th>\n",
        "      <th>20150226_N</th>\n",
-       "      <th>20150210_N</th>\n",
        "      <th>...</th>\n",
        "      <th>20140610_N</th>\n",
        "      <th>20140525_N</th>\n",
@@ -341,6 +338,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
+       "      <td>997.904</td>\n",
        "      <td>637.5950</td>\n",
        "      <td>658.668</td>\n",
        "      <td>-1882.030</td>\n",
@@ -349,7 +347,6 @@
        "      <td>-1739.990</td>\n",
        "      <td>630.087</td>\n",
        "      <td>-1628.240</td>\n",
-       "      <td>-1325.64</td>\n",
        "      <td>...</td>\n",
        "      <td>-921.193</td>\n",
        "      <td>-1043.160</td>\n",
@@ -365,6 +362,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
+       "      <td>914.198</td>\n",
        "      <td>634.2400</td>\n",
        "      <td>593.705</td>\n",
        "      <td>-1625.790</td>\n",
@@ -373,7 +371,6 @@
        "      <td>-692.386</td>\n",
        "      <td>707.626</td>\n",
        "      <td>-1670.590</td>\n",
-       "      <td>-1408.64</td>\n",
        "      <td>...</td>\n",
        "      <td>-954.719</td>\n",
        "      <td>-933.934</td>\n",
@@ -389,6 +386,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
+       "      <td>3800.810</td>\n",
        "      <td>1671.3400</td>\n",
        "      <td>1206.880</td>\n",
        "      <td>449.735</td>\n",
@@ -397,7 +395,6 @@
        "      <td>1077.840</td>\n",
        "      <td>214.564</td>\n",
        "      <td>849.599</td>\n",
-       "      <td>1283.63</td>\n",
        "      <td>...</td>\n",
        "      <td>1562.210</td>\n",
        "      <td>1566.160</td>\n",
@@ -413,6 +410,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
+       "      <td>952.178</td>\n",
        "      <td>58.0174</td>\n",
        "      <td>-1599.160</td>\n",
        "      <td>210.714</td>\n",
@@ -421,7 +419,6 @@
        "      <td>-1564.630</td>\n",
        "      <td>-858.390</td>\n",
        "      <td>729.790</td>\n",
-       "      <td>-3162.14</td>\n",
        "      <td>...</td>\n",
        "      <td>-1025.880</td>\n",
        "      <td>368.622</td>\n",
@@ -437,6 +434,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
+       "      <td>1232.120</td>\n",
        "      <td>72.5180</td>\n",
        "      <td>-1220.880</td>\n",
        "      <td>380.436</td>\n",
@@ -445,7 +443,6 @@
        "      <td>-1413.180</td>\n",
        "      <td>-802.942</td>\n",
        "      <td>683.254</td>\n",
-       "      <td>-2829.40</td>\n",
        "      <td>...</td>\n",
        "      <td>-1813.950</td>\n",
        "      <td>155.624</td>\n",
@@ -460,23 +457,23 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
+       "<p>5 rows × 29 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   class  20150720_N  20150602_N  20150517_N  20150501_N  20150415_N  \\\n",
-       "0      0    637.5950     658.668   -1882.030    -1924.36     997.904   \n",
-       "1      0    634.2400     593.705   -1625.790    -1672.32     914.198   \n",
-       "2      0   1671.3400    1206.880     449.735     1071.21     546.371   \n",
-       "3      0     58.0174   -1599.160     210.714    -1052.63     578.807   \n",
-       "4      0     72.5180   -1220.880     380.436    -1256.93     515.805   \n",
+       "   class  max_ndvi  20150720_N  20150602_N  20150517_N  20150501_N  \\\n",
+       "0      0   997.904    637.5950     658.668   -1882.030    -1924.36   \n",
+       "1      0   914.198    634.2400     593.705   -1625.790    -1672.32   \n",
+       "2      0  3800.810   1671.3400    1206.880     449.735     1071.21   \n",
+       "3      0   952.178     58.0174   -1599.160     210.714    -1052.63   \n",
+       "4      0  1232.120     72.5180   -1220.880     380.436    -1256.93   \n",
        "\n",
-       "   20150330_N  20150314_N  20150226_N  20150210_N     ...      20140610_N  \\\n",
-       "0   -1739.990     630.087   -1628.240    -1325.64     ...        -921.193   \n",
-       "1    -692.386     707.626   -1670.590    -1408.64     ...        -954.719   \n",
-       "2    1077.840     214.564     849.599     1283.63     ...        1562.210   \n",
-       "3   -1564.630    -858.390     729.790    -3162.14     ...       -1025.880   \n",
-       "4   -1413.180    -802.942     683.254    -2829.40     ...       -1813.950   \n",
+       "   20150415_N  20150330_N  20150314_N  20150226_N     ...      20140610_N  \\\n",
+       "0     997.904   -1739.990     630.087   -1628.240     ...        -921.193   \n",
+       "1     914.198    -692.386     707.626   -1670.590     ...        -954.719   \n",
+       "2     546.371    1077.840     214.564     849.599     ...        1562.210   \n",
+       "3     578.807   -1564.630    -858.390     729.790     ...       -1025.880   \n",
+       "4     515.805   -1413.180    -802.942     683.254     ...       -1813.950   \n",
        "\n",
        "   20140525_N  20140509_N  20140423_N  20140407_N  20140322_N  20140218_N  \\\n",
        "0   -1043.160   -1942.490     267.138     366.608     452.238     211.328   \n",
@@ -492,10 +489,10 @@
        "3    -2202.12     600.359   -1343.550  \n",
        "4    -2197.36     626.379    -826.727  \n",
        "\n",
-       "[5 rows x 28 columns]"
+       "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,14 +968,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 去掉第二列并写入文件\n",
-    "d = test_data.drop(['max_ndvi'],axis=1)\n",
-    "d.head()\n",
-    "d.to_csv('test_data.csv')"
+    "test_data.to_csv('test_data.csv')"
    ]
   }
  ],
