--- a/classification_of_satellite_images/train01.ipynb
+++ b/classification_of_satellite_images/train01.ipynb
@@ -16,20 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  637.595   658.668 -1882.03  ..., -2203.02  -1180.19    433.906]\n",
-      " [  634.24    593.705 -1625.79  ..., -2250.    -1360.56    524.075]\n",
-      " [ 1671.34   1206.88    449.735 ...,  2762.57    150.931  3800.81 ]\n",
+      "[[  997.904   637.595   658.668 ..., -2203.02  -1180.19    433.906]\n",
+      " [  914.198   634.24    593.705 ..., -2250.    -1360.56    524.075]\n",
+      " [ 3800.81   1671.34   1206.88  ...,  2762.57    150.931  3800.81 ]\n",
       " ..., \n",
-      " [ 3465.74   1283.32    413.412 ...,  3759.71   3267.17    388.346]\n",
-      " [ 2435.3    1444.4    1133.76  ...,  1880.59   1614.84   1518.98 ]\n",
-      " [ 6941.19   1667.87   5084.78  ...,  5983.13   1249.71   2424.23 ]] [ 0.  0.  0. ...,  5.  5.  5.]\n",
+      " [ 5833.76   3465.74   1283.32  ...,  3759.71   3267.17    388.346]\n",
+      " [ 3079.31   2435.3    1444.4   ...,  1880.59   1614.84   1518.98 ]\n",
+      " [ 7352.57   6941.19   1667.87  ...,  5983.13   1249.71   2424.23 ]] [ 0.  0.  0. ...,  5.  5.  5.]\n",
       "True\n"
      ]
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -100,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.47\n"
+      "0.48\n"
      ]
     }
    ],
@@ -129,6 +129,50 @@
    "source": [
     "这个初始的结论是线性模型不适用"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One vs Rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.multiclass import OneVsRestClassifier\n",
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.483333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = OneVsRestClassifier(LogisticRegression()).fit(X_train,y_train).predict(X_test)\n",
+    "acc = metrics.accuracy_score(y_test,y_pred)\n",
+    "print(acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
