--- a/classification_of_satellite_images/train01.ipynb
+++ b/classification_of_satellite_images/train01.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,11 +168,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NB"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.686666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "gnb = GaussianNB()\n",
+    "y_pred = gnb.fit(X_train,y_train).predict(X_test)\n",
+    "acc = metrics.accuracy_score(y_test,y_pred)\n",
+    "print(acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "看起来贝叶斯分类对噪音的容忍度很好呀"
+   ]
   }
  ],
  "metadata": {
