--- a/classification_of_satellite_images/08-bagging.ipynb
+++ b/classification_of_satellite_images/08-bagging.ipynb
@@ -13,14 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  997.9039917    637.5949707    658.66802979 ..., -2203.02001953\n  -1180.18994141   433.90600586]\n [  914.19799805   634.23999023   593.70501709 ..., -2250.         -1360.56005859\n    524.07501221]\n [ 3800.81005859  1671.33996582  1206.88000488 ...,  2762.57006836\n    150.93099976  3800.81005859]\n ..., \n [ 5833.75976562  3465.73999023  1283.31994629 ...,  3759.70996094\n   3267.16992188   388.3460083 ]\n [ 3079.31005859  2435.30004883  1444.40002441 ...,  1880.58996582\n   1614.83996582  1518.97998047]\n [ 7352.56982422  6941.18994141  1667.86999512 ...,  5983.12988281\n   1249.70996094  2424.22998047]]\n[0 0 0 ..., 5 5 5]\n[[ 2750.11010742  1361.89001465  -247.50799561 ...,   -81.54180145\n   1146.26000977 -1566.48999023]\n [ 2646.25        1760.84997559   481.1000061  ...,   668.75        1519.73999023\n   -568.97302246]\n [ 3509.62011719  3509.62011719  -241.32000732 ...,  1132.90002441\n    594.059021    -993.65802002]\n ..., \n [  987.46099854 -2364.60009766  -155.59199524 ..., -4259.29980469\n    412.11499023 -1170.75      ]\n [  973.95300293 -3004.62988281 -1217.11999512 ..., -5574.50976562\n    298.73901367   460.41900635]\n [  516.42700195 -2975.10009766 -1129.79003906 ..., -5453.33007812\n    307.49499512   417.12399292]]\n[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 4 1 1 1 1 4 1 1 1 1 1 1 3 1 1 1 1 1\n 1 1 1 1 4 2 1 4 1 0 0 1 1 1 2 1 0 0 1 1 2 1 1 1 1 1 1 1 1 4 1 1 1 4 2 4 0\n 0 0 0 0 1 5 4 5 5 5 5 5 1 5 5 5 5 5 5 4 4 3 5 5 5 5 1 4 5 1 3 5 5 5 4 5 4\n 4 1 5 5 4 3 4 1 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 2 1 2 1 3 3 2 5 4 3 3 2 2 2\n 2 2 2 2 2 3 3 3 2 3 3 3 3 3 3 3 3 3 5 5 5 3 3 3 3 5 2 2 2 5 3 3 2 2 3 3 2\n 2 2 2 2 2 2 2 2 2 3 2 2 2 2 2 2 2 2 2 2 2 4 5 5 5 1 4 3 3 3 3 5 4 3 5 4 5\n 3 5 4 5 3 3 3 5 2 2 2 2 2 1 4 4 1 1 1 1 1 1 1 1 1 4 4 1 1 1 1 1 1 4 1 4 4\n 4 1 1 1 4 4 4 4 4 1 1 1 1 1 1 1 5 5 4 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n 0 0 0 0]\n"
+      "(10545, 28)\n(10545,)\n(300, 28)\n(300,)\n(10545, 28)\n(300,)\n(10545, 28)\n(10545,)\n(300, 28)\n(300,)\n(10545, 1)\n(10545, 29)\n(10545, 29)\n"
      ]
     }
    ],
@@ -32,30 +32,59 @@
     "TRAIN_DATA_FILE = \"train_data.csv\"\n",
     "TEST_DATA_FILE = \"test_data.csv\"\n",
     "\n",
-    "training_set = tf.contrib.learn.datasets.base.load_csv_with_header(\n",
-    "    filename=TRAIN_DATA_FILE,\n",
-    "    target_dtype=np.int,\n",
-    "    features_dtype=np.float32,\n",
-    "    target_column=0\n",
-    ")\n",
-    "test_set = tf.contrib.learn.datasets.base.load_csv_with_header(\n",
-    "    filename=TEST_DATA_FILE,\n",
-    "    target_dtype=np.int,\n",
-    "    features_dtype=np.float32,\n",
-    "    target_column=0\n",
-    ")\n",
+    "\n",
+    "def read_split_train_test_data():\n",
+    "    training_set = tf.contrib.learn.datasets.base.load_csv_with_header(\n",
+    "        filename=TRAIN_DATA_FILE,\n",
+    "        target_dtype=np.int,\n",
+    "        features_dtype=np.float32,\n",
+    "        target_column=0\n",
+    "    )\n",
+    "    test_set = tf.contrib.learn.datasets.base.load_csv_with_header(\n",
+    "        filename=TEST_DATA_FILE,\n",
+    "        target_dtype=np.int,\n",
+    "        features_dtype=np.float32,\n",
+    "        target_column=0\n",
+    "    )\n",
+    "    # print(training_set)\n",
+    "    X, y = training_set.data, training_set.target\n",
+    "    print(X.shape)\n",
+    "    print(y.shape)\n",
+    "    X_test, y_test = test_set.data, test_set.target\n",
+    "    print(X_test.shape)\n",
+    "    print(y_test.shape)\n",
+    "    return X, y, X_test, y_test\n",
+    "\n",
+    "\n",
+    "def read_train_test_data():\n",
+    "    '''不把标签和数据分开'''\n",
+    "    x, y, x_t, y_t = read_split_train_test_data()\n",
+    "    y = y.reshape(x.shape[0], -1)\n",
+    "    print(y.shape)\n",
+    "    y_t = y_t.reshape(x_t.shape[0], -1)\n",
+    "    x_train = np.concatenate((x, y), axis=1)\n",
+    "    x_test = np.concatenate((x_t, y_t), axis=1)\n",
+    "    print(x_train.shape)\n",
+    "    return x_train, x_test\n",
+    "\n",
+    "\n",
+    "def split_data_label(X):\n",
+    "    '''将数据和标签分开,默认标签位于最后一列'''\n",
+    "    data, label = X[:, :-1], X[:, -1]\n",
+    "    return data, label\n",
+    "\n",
+    "\n",
     "# print(training_set)\n",
-    "X, y = training_set.data, training_set.target\n",
-    "print(X)\n",
-    "print(y)\n",
-    "X_test, y_test = test_set.data, test_set.target\n",
-    "print(X_test)\n",
-    "print(y_test)"
+    "X, y, X_test, y_test = read_split_train_test_data()\n",
+    "print(X.shape)\n",
+    "print(y_test.shape)\n",
+    "d_train, d_test = read_train_test_data()\n",
+    "print(d_train.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.683333333333\n"
+      "0.663333333333\n"
      ]
     }
    ],
@@ -88,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.ndarray'>\n0.683333333333\n"
+      "<class 'numpy.ndarray'>\n0.676666666667\n"
      ]
     }
    ],
@@ -116,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,42 +166,37 @@
     }
    ],
    "source": [
-    "# 提取出类别为1的数据\n",
-    "X_1 = np.array([list(X[i]) for i in range(len(y)) if y[i] == 1])\n",
-    "y_1 = np.array([y[i] for i in range(len(y)) if y[i] == 1])\n",
-    "print(X_1.shape[0], y_1.shape[0])\n",
-    "# 提取出类别不为1的数据\n",
-    "X_n1 = np.array([list(X[i]) for i in range(len(y)) if y[i] != 1])\n",
-    "y_n1 = np.array([y[i] for i in range(len(y)) if y[i] != 1])\n",
-    "print(len(X_n1), len(y_n1))\n",
-    "\n",
-    "# 将类别为1的随机分成5份和其他类别数据再组成5份训练数据\n",
-    "X_5 = []  # 每个元素是一个X训练数据\n",
-    "y_5 = []  # 每个元素是一个y训练数据\n",
-    "\n",
-    "\n",
-    "\n"
+    "def split_class_1(X, y):\n",
+    "    # 提取出类别为1的数据\n",
+    "    X_1 = np.array([list(X[i]) for i in range(len(y)) if y[i] == 1])\n",
+    "    y_1 = np.array([y[i] for i in range(len(y)) if y[i] == 1])\n",
+    "    print(X_1.shape[0], y_1.shape[0])\n",
+    "    # 提取出类别不为1的数据\n",
+    "    X_n1 = np.array([list(X[i]) for i in range(len(y)) if y[i] != 1])\n",
+    "    y_n1 = np.array([y[i] for i in range(len(y)) if y[i] != 1])\n",
+    "    return X_1, y_1, X_n1, y_n1\n",
+    "# print(len(X_n1), len(y_n1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 300)\n0.71\n"
+      "(6, 300)\n0.693333333333\n"
      ]
     }
    ],
    "source": [
     "pred_record = []\n",
     "y_pred = None\n",
-    "al = int(len(X_1) / 5)\n",
+    "al = int(len(X_1) / 7)\n",
     "gnb = GaussianNB()\n",
-    "for i in range(5):\n",
+    "for i in range(6):\n",
     "    xt1 = X_1[i * al:(i + 1) * al, :]\n",
     "    yt1 = y_1[i * al:(i + 1) * al]\n",
     "    X_temp = np.concatenate((xt1, X_n1), axis=0)\n",
@@ -186,7 +210,7 @@
     "\n",
     "        # acc = metrics.accuracy_score(y_test, y_pred)\n",
     "        # print(acc)\n",
-    "y_pred = y_pred.reshape(5, -1)\n",
+    "y_pred = y_pred.reshape(6, -1)\n",
     "print(y_pred.shape)\n",
     "\n",
     "col_len = y_pred.shape[1]\n",
@@ -203,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -215,6 +239,7 @@
     }
    ],
    "source": [
+    "\n",
     "al = int(len(X_1) / 4)\n",
     "gnb = GaussianNB()\n",
     "for i in range(4):\n",
