--- a/classification_of_satellite_images/08-bagging.ipynb
+++ b/classification_of_satellite_images/08-bagging.ipynb
@@ -2,28 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# 使用bagging"
+    "# 使用bagging\n",
+    "\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10545, 28)\n(10545,)\n(300, 28)\n(300,)\n(10545, 28)\n(300,)\n(10545, 28)\n(10545,)\n(300, 28)\n(300,)\n(10545, 1)\n(10545, 29)\n(10545, 29)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -48,11 +42,11 @@
     "    )\n",
     "    # print(training_set)\n",
     "    X, y = training_set.data, training_set.target\n",
-    "    print(X.shape)\n",
-    "    print(y.shape)\n",
+    "    # print(X.shape)\n",
+    "    # print(y.shape)\n",
     "    X_test, y_test = test_set.data, test_set.target\n",
-    "    print(X_test.shape)\n",
-    "    print(y_test.shape)\n",
+    "    # print(X_test.shape)\n",
+    "    # print(y_test.shape)\n",
     "    return X, y, X_test, y_test\n",
     "\n",
     "\n",
@@ -60,11 +54,11 @@
     "    '''不把标签和数据分开'''\n",
     "    x, y, x_t, y_t = read_split_train_test_data()\n",
     "    y = y.reshape(x.shape[0], -1)\n",
-    "    print(y.shape)\n",
+    "    # print(y.shape)\n",
     "    y_t = y_t.reshape(x_t.shape[0], -1)\n",
     "    x_train = np.concatenate((x, y), axis=1)\n",
     "    x_test = np.concatenate((x_t, y_t), axis=1)\n",
-    "    print(x_train.shape)\n",
+    "    # print(x_train.shape)\n",
     "    return x_train, x_test\n",
     "\n",
     "\n",
@@ -74,21 +68,17 @@
     "    return data, label\n",
     "\n",
     "\n",
-    "# print(training_set)\n",
-    "X, y, X_test, y_test = read_split_train_test_data()\n",
-    "print(X.shape)\n",
-    "print(y_test.shape)\n",
-    "d_train, d_test = read_train_test_data()\n",
-    "print(d_train.shape)\n"
+    "d_train, d_test = read_train_test_data()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn import metrics\n",
     "from sklearn.ensemble import BaggingClassifier\n",
     "from collections import Counter"
@@ -96,39 +86,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.663333333333\n"
+      "(10545, 28)\n(10545,)\n(300, 28)\n(300,)\n0.68\n<class 'numpy.ndarray'>\n0.683333333333\n"
      ]
     }
    ],
    "source": [
+    "X,y,X_test,y_test = read_split_train_test_data()\n",
     "cls = BaggingClassifier(base_estimator=GaussianNB(),max_samples=1.0)\n",
     "\n",
     "y_pred = cls.fit(X, y).predict(X_test)\n",
     "acc = metrics.accuracy_score(y_test, y_pred)\n",
-    "print(acc)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'numpy.ndarray'>\n0.676666666667\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(acc)\n",
+    "\n",
     "# 打乱数据集\n",
     "\n",
     "cls = BaggingClassifier(base_estimator=GaussianNB(), max_samples=1.0)\n",
@@ -140,7 +116,7 @@
     "y_pred = cls.fit(rand_data_x, rand_data_y).predict(X_test)\n",
     "print(type(y_pred))\n",
     "acc = metrics.accuracy_score(y_test, y_pred)\n",
-    "print(acc)\n"
+    "print(acc)"
    ]
   },
   {
@@ -154,19 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7431 7431\n3114 3114\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def split_class_1(X, y):\n",
+    "def split_class_1(data):\n",
+    "    X, y = split_data_label(data)\n",
     "    # 提取出类别为1的数据\n",
     "    X_1 = np.array([list(X[i]) for i in range(len(y)) if y[i] == 1])\n",
     "    y_1 = np.array([y[i] for i in range(len(y)) if y[i] == 1])\n",
@@ -174,27 +143,42 @@
     "    # 提取出类别不为1的数据\n",
     "    X_n1 = np.array([list(X[i]) for i in range(len(y)) if y[i] != 1])\n",
     "    y_n1 = np.array([y[i] for i in range(len(y)) if y[i] != 1])\n",
-    "    return X_1, y_1, X_n1, y_n1\n",
-    "# print(len(X_n1), len(y_n1))"
+    "    return X_1, y_1, X_n1, y_n1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6, 300)\n0.693333333333\n"
+      "7431 7431\n(6, 300)\n0.706666666667\n{0.0: 9, 4.0: 15, 3.0: 12, 2.0: 26, 1.0: 20, 5.0: 6}\n[0.1956521739130435, 0.2564102564102564, 0.4166666666666667, 0.22641509433962265, 0.5531914893617021, 0.15]\n"
      ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABI8AAAFACAYAAAA1c1zEAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAHbFJREFUeJzt3X+wpXddH/D3h11SKiQgZM2kycaNNEMnIAZcExTHIqAT\njE2wgE0qGKfoykxSQ8GRlWrUUJ34K3SU6BglBSwakIBszWrEkBZDIWQTAuSHkW26ymYi2QiSQMGQ\n5NM/7lm8LPvs3r13z3n23Pt6zZy55/me55znfZ8B9sv7Puf7VHcHAAAAAPbnMWMHAAAAAODIpTwC\nAAAAYJDyCAAAAIBByiMAAAAABimPAAAAABikPAIAAABgkPIIAAAAgEHKIwAAAAAGKY8AAAAAGLR+\n7ABLceyxx/amTZvGjgEATMnNN998f3dvGDsHX80cDABWt6XOweaiPNq0aVN27NgxdgwAYEqq6m/G\nzsDXMgcDgNVtqXMwX1sDAAAAYJDyCAAAAIBByiMAAAAABimPAAAAABikPAIAAABgkPIIAAAAgEHK\nIwAAAAAGKY8AAAAAGKQ8AgAAAGCQ8ggAAACAQcojAAAAAAatHzsArFWbtl4zdoRR7br0rLEjAABr\n0Fqeg5l/AcvlyiMAAAAABimPAAAAABikPAIAAABgkPIIAAAAgEHKIwAAAAAGKY8AAAAAGDS18qiq\nNlbV9VV1R1XdXlUXTcZ/vqruqapbJ4/vm1YGAAAAAFZm/RQ/++Ekr+3uW6rq6CQ3V9X7Jq+9sbt/\nbYrHBgAAAOAwmFp51N33Jrl38vzBqrozyQnTOh4AAAAAh99M1jyqqk1JnpXkxsnQhVX18aq6sqq+\nfuA9W6pqR1Xt2LNnzyxiAgAAALCPqZdHVfWEJFcneXV3P5Dkt5M8NclpWbgy6df3977uvqK7N3f3\n5g0bNkw7JgAAAAD7MdXyqKoem4Xi6O3d/e4k6e5Pd/cj3f1okt9Ncvo0MwAAAACwfNO821oleXOS\nO7v7skXjxy/a7QeS3DatDAAAAACszDTvtvbcJK9I8omqunUy9vok51XVaUk6ya4kPz7FDAAAAACs\nwDTvtnZDktrPS9undUwAAAAADq+Z3G0NAAAAgPmkPAIAAABgkPIIAAAAgEHKIwAAAAAGKY8AAAAA\nGKQ8AgAAAGCQ8ggAYM5V1ZlVdVdV7ayqrft5/Ueqak9V3Tp5/OgYOQGA+bR+7AAAACxfVa1LcnmS\n70myO8lNVbWtu+/YZ9d3dPeFMw8IAMw9Vx4BAMy305Ps7O67u/uhJFclOWfkTADAKqI8AgCYbyck\n+dSi7d2TsX29pKo+XlXvqqqNQx9WVVuqakdV7dizZ8/hzgoAzCHlEQDA6vc/kmzq7mcmeV+Stw7t\n2N1XdPfm7t68YcOGmQUEAI5cyiMAgPl2T5LFVxKdOBn7iu7+++7+x8nm7yX51hllAwBWAeURAMB8\nuynJKVV1clUdleTcJNsW71BVxy/aPDvJnTPMBwDMOXdbAwCYY939cFVdmOTaJOuSXNndt1fVJUl2\ndPe2JD9RVWcneTjJZ5L8yGiBAYC5ozwCAJhz3b09yfZ9xi5e9Pynk/z0rHMBAKuDr60BAAAAMEh5\nBAAAAMAg5REAAAAAg5RHAAAAAAxSHgEAAAAwSHkEAAAAwCDlEQAAAACDlEcAAAAADFIeAQAAADBI\neQQAAADAIOURAAAAAIOURwAAAAAMUh4BAAAAMEh5BAAAAMAg5REAAAAAg5RHAAAAAAxSHgEAAAAw\nSHkEAAAAwCDlEQAAAACDlEcAAAAADFIeAQAAADBIeQQAAADAIOURAAAAAIOURwAAAAAMUh4BAAAA\nMGhq5VFVbayq66vqjqq6vaoumow/uareV1WfnPz8+mllAAAAAGBlpnnl0cNJXtvdpyZ5TpILqurU\nJFuTXNfdpyS5brINAAAAwBFoauVRd9/b3bdMnj+Y5M4kJyQ5J8lbJ7u9NcmLp5UBAAAAgJWZyZpH\nVbUpybOS3JjkuO6+d/LS3yU5bhYZAAAAADh066d9gKp6QpKrk7y6ux+oqq+81t1dVT3wvi1JtiTJ\nSSedNO2YLNOmrdeMHWE0uy49a+wIAAAAMHVTvfKoqh6bheLo7d397snwp6vq+Mnrxye5b3/v7e4r\nuntzd2/esGHDNGMCAAAAMGCad1urJG9Ocmd3X7bopW1Jzp88Pz/Je6eVAQAAAICVmebX1p6b5BVJ\nPlFVt07GXp/k0iTvrKpXJvmbJD84xQwAAAAArMDUyqPuviFJDbz8gmkdFwAAAI401otlns3kbmsA\nAAAAzCflEQAAAACDlEcAAAAADFIeAQCsAlV1ZlXdVVU7q2rrAfZ7SVV1VW2eZT4AYH4pjwAA5lxV\nrUtyeZIXJTk1yXlVdep+9js6yUVJbpxtQgBgnimPAADm3+lJdnb33d39UJKrkpyzn/3ekOSXk3xp\nluEAgPmmPAIAmH8nJPnUou3dk7GvqKpnJ9nY3Wv3XtEAwLIojwAAVrmqekySy5K8dgn7bqmqHVW1\nY8+ePdMPBwAc8ZRHAADz754kGxdtnzgZ2+voJM9I8j+raleS5yTZtr9Fs7v7iu7e3N2bN2zYMMXI\nAMC8UB4BAMy/m5KcUlUnV9VRSc5Nsm3vi939ue4+trs3dfemJB9OcnZ37xgnLgAwT5RHAABzrrsf\nTnJhkmuT3Jnknd19e1VdUlVnj5sOAJh368cOAADAynX39iTb9xm7eGDf580iEwCwOrjyCAAAAIBB\nyiMAAAAABimPAAAAABikPAIAAABgkPIIAAAAgEHKIwAAAAAGKY8AAAAAGKQ8AgAAAGCQ8ggAAACA\nQcojAAAAAAYpjwAAAAAYpDwCAAAAYJDyCAAAAIBByiMAAAAABimPAAAAABikPAIAAABgkPIIAAAA\ngEHKIwAAAAAGKY8AAAAAGKQ8AgAAAGCQ8ggAAACAQcojAAAAAAYpjwAAAAAYpDwCAAAAYJDyCAAA\nAIBBBy2PqurkpYwBAAAAsPos5cqjq/cz9q7DHQQAAACAI8/6oReq6l8leXqSJ1bVv1300jFJHjft\nYAAAAACMb7A8SvK0JN+f5ElJ/s2i8QeT/Ng0QwEAAABwZBgsj7r7vUneW1Xf3t0fOtQPrqors1A+\n3dfdz5iM/XwWiqc9k91e393bDzk1AMAqVVUnd/f/PdgYAMCsHOjKo712VtXrk2xavH93/4eDvO8t\nSd6U5G37jL+xu3/tEDICAKwlVyd59j5j70ryrSNkAQBYUnn03iR/meQvkjyy1A/u7g9U1ablxQIA\nWFusNwkAHKmWUh59XXe/7jAe88Kq+uEkO5K8trs/u7+dqmpLki1JctJJJx3GwwOsbZu2XjN2hFHt\nuvSssSPAEOtNAgBHpKWUR39SVd93mNYm+u0kb0jSk5+/nmS/X3/r7iuSXJEkmzdv7sNwbACAI9ZK\n15sEAJiWpZRHFyV5fVX9Y5IvJ6kk3d3HHOrBuvvTe59X1e8m+ZND/QwAgFVuuetNAgBMxUHLo+4+\n+nAdrKqO7+57J5s/kOS2w/XZAACrxLLWmwQAmJaDlkdV9QNJ3t/dn5tsPynJ87r7jw/yvj9M8rwk\nx1bV7iQ/l+R5VXVaFr62tivJj68oPQDA6nO415sEAFiRpXxt7ee6+z17N7r7H6rq55IcsDzq7vP2\nM/zmQ8wHALDWHM71JgEAVuwxy9xnKaUTAACH7qIsFEhfqqoHqurBqnrgYG+qqjOr6q6q2llVW/fz\n+quq6hNVdWtV3VBVp04lPQCw6iylPNpRVZdV1VMnj8uS3DztYAAAa1F3H93dj+nux3X3MZPtA96o\npKrWJbk8yYuSnJrkvP2UQ3/Q3d/c3acl+ZUkl03lFwAAVp2llEf/MclDSd6R5KokX0pywTRDAQCs\nVbXg5VX1s5PtjVV1+kHednqSnd19d3c/lIU52zmLd+juxVcvPT4La1ACABzUUu629oUkX3PpMwAA\nU/FbSR5N8vwkb0jy+SxcVfRtB3jPCUk+tWh7d5Iz9t2pqi5I8pokR00+/2tU1ZYkW5LkpJNOOvT0\nAMCqs5QrjwAAmJ0zuvuCLFztne7+bBbKnhXr7su7+6lJXpfkZwb2uaK7N3f35g0bNhyOwwIAc055\nBABwZPnyZA2jTpKq2pCFK5EO5J4kGxdtnzgZG3JVkhevJCQAsHYcsDyqqnVV9Z9mFQYAgPxGkvck\n+Yaq+sUkNyT5pYO856Ykp1TVyVV1VJJzk2xbvENVnbJo86wknzx8kQGA1eyAax519yNVdV6SN84o\nDwDAmtbdb6+qm5O8IEkleXF333mQ9zxcVRcmuTbJuiRXdvftVXVJkh3dvS3JhVX1wiRfTvLZJOdP\n9RcBAFaNgy6YneSDVfWmLNxt7Qt7B7v7lqmlAgBYo6rqOUlu7+7LJ9vHVNUZ3X3jgd7X3duTbN9n\n7OJFzy+aRl4AYPVbSnl02uTnJYvGOgN36AAAYEV+O8mzF21/fj9jAAAzc9DyqLu/exZBAABIklR3\n996N7n60qpbyBz8AgKk46N3WquqJVXVZVe2YPH69qp44i3AAAGvQ3VX1E1X12MnjoiR3jx0KAFi7\nDloeJbkyyYNJfnDyeCDJf5tmKACANexVSb4jyT1Jdic5I8mWURMBAGvaUi6Bfmp3v2TR9i9U1a3T\nCgQAsFZV1bokP9Td546dBQBgr6VcefTFqvrOvRtV9dwkX5xeJACAtam7H0ly3tg5AAAWW8qVR69K\n8rZF6xx9Nsn504sEALCmfbCq3pTkHUm+sHewu28ZLxIAsJYdsDyqqsckeVp3f0tVHZMk3f3ATJIB\nAKxNp01+XrJorJM8f4QsAAAHLo8mt4b9qSTvVBoBAExfd3/32BkAABZbyppHf1FVP1lVG6vqyXsf\nU08GALAGVdVxVfXmqvrTyfapVfXKsXMBAGvXUsqjf5fkgiQfSHLz5LFjmqEAANawtyS5Nsm/mGz/\ndZJXj5YGAFjzDlgeTdY8enl3n7zP45tmlA8AYK05trvfmeTRJOnuh5M8Mm4kAGAtO2B51N2PJnnT\njLIAAJB8oaqekoVFslNVz0nyuXEjAQBr2QEXzJ64rqpekuTd3d3TDgQAsMa9Jsm2JN9UVR9MsiHJ\nS8eNBACsZUspj348C5OYR6rqi0kqSXf3MVNNBgCwNt2R5D1J/l+SB5P8cRbWPQIAGMVBy6PuPnoW\nQQAOxaat14wdYTS7Lj1r7AjAdL0tyQNJfmmy/e+T/H6Sl42WiCPKWv43MPHvIMAYDloeVVUl+aEk\nJ3f3G6pqY5Lju/sjU08HALD2PKO7T120fX1V3TFaGgBgzTvggtkTv5Xk27PwV68k+XySy6eWCABg\nbbtlskh2kqSqzkiyY8Q8AMAat5Q1j87o7mdX1UeTpLs/W1VHTTkXAMBa9a1J/ndV/e1k+6Qkd1XV\nJ7Kw7uQzx4sGAKxFSymPvlxV6/JPt4vdkOTRqaYCAFi7zhw7AADAYkspj34jC3f8+Iaq+sUs3Cr2\nZ6aaCgBgjeruvxk7AwDAYku529rbq+rmJC9IUkle3N13Tj0ZAAAAAKNbypVH6e6/SvJXU84CAAAA\nwBFmKXdbAwAAAGCNUh4BAAAAMEh5BAAAAMAg5REAAAAAg5RHAAAAAAxSHgEAAAAwaP3YAQAAADjy\nbdp6zdgRRrXr0rPGjgCjceURAAAAAIOURwAAAAAMmlp5VFVXVtV9VXXborEnV9X7quqTk59fP63j\nAwAAALBy07zy6C1JztxnbGuS67r7lCTXTbYBAAAAOEJNrTzq7g8k+cw+w+ckeevk+VuTvHhaxwcA\nAABg5Wa95tFx3X3v5PnfJTluaMeq2lJVO6pqx549e2aTDgAAAICvMtqC2d3dSfoAr1/R3Zu7e/OG\nDRtmmAwAAACAvWZdHn26qo5PksnP+2Z8fAAAAAAOwazLo21Jzp88Pz/Je2d8fACAVaeqzqyqu6pq\nZ1V9zQ1Jquo1VXVHVX28qq6rqm8cIycAMJ+mVh5V1R8m+VCSp1XV7qp6ZZJLk3xPVX0yyQsn2wAA\nLFNVrUtyeZIXJTk1yXlVdeo+u300yebufmaSdyX5ldmmBADm2fppfXB3nzfw0gumdUwAgDXo9CQ7\nu/vuJKmqq7Jwh9s79u7Q3dcv2v/DSV4+04QAwFwbbcFsAAAOixOSfGrR9u7J2JBXJvnToRfd8RYA\n2JfyCABgjaiqlyfZnORXh/Zxx1sAYF9T+9oaAAAzcU+SjYu2T5yMfZWqemGS/5zkX3f3P84o26BN\nW68ZO8Jodl161tgRAOCQuPIIAGC+3ZTklKo6uaqOSnJuFu5w+xVV9awkv5Pk7O6+b4SMAMAcW/NX\nHq3lv3ol/vIFAPOuux+uqguTXJtkXZIru/v2qrokyY7u3paFr6k9IckfVVWS/G13nz1aaABgrqz5\n8ggAYN519/Yk2/cZu3jR8xfOPBQAsGr42hoAAAAAg5RHAAAAAAxSHgEAAAAwSHkEAAAAwCDlEQAA\nAACDlEcAAAAADFIeAQAAADBIeQQAAADAIOURAAAAAIOURwAAAAAMUh4BAAAAMEh5BAAAAMAg5REA\nAAAAg5RHAAAAAAxSHgEAAAAwSHkEAAAAwCDlEQAAAACDlEcAAAAADFo/dgAAAACAIZu2XjN2hFHt\nuvSssSO48ggAAACAYcojAAAAAAYpjwAAAAAYpDwCAAAAYJDyCAAAAIBByiMAAAAABimPAAAAABik\nPAIAAABgkPIIAAAAgEHrxw4AAPNk09Zrxo4wml2XnjV2BAAARuDKIwAAAAAGKY8AAAAAGKQ8AgAA\nAGCQ8ggAAACAQcojAAAAAAYpjwAAAAAYtH6Mg1bVriQPJnkkycPdvXmMHAAAAAAc2Cjl0cR3d/f9\nIx4fAAAAgIPwtTUAAAAABo1VHnWSP6+qm6tqy/52qKotVbWjqnbs2bNnxvEAAOZHVZ1ZVXdV1c6q\n2rqf17+rqm6pqoer6qVjZAQA5tdY5dF3dvezk7woyQVV9V377tDdV3T35u7evGHDhtknBACYA1W1\nLsnlWZhXnZrkvKo6dZ/d/jbJjyT5g9mmAwBWg1HKo+6+Z/LzviTvSXL6GDkAAFaB05Ps7O67u/uh\nJFclOWfxDt29q7s/nuTRMQICAPNt5uVRVT2+qo7e+zzJ9ya5bdY5AABWiROSfGrR9u7J2LJYOgAA\n2NcYVx4dl+SGqvpYko8kuaa7/2yEHAAA7MPSAQDAvtbP+oDdfXeSb5n1cQEAVql7kmxctH3iZAwA\n4LAYa8FsAAAOj5uSnFJVJ1fVUUnOTbJt5EwAwCqiPAIAmGPd/XCSC5Ncm+TOJO/s7tur6pKqOjtJ\nqurbqmp3kpcl+Z2qun28xADAvJn519YAADi8unt7ku37jF286PlNWfg6GwDAIXPlEQAAAACDlEcA\nAAAADFIeAQAAADBIeQQAAADAIOURAAAAAIOURwAAAAAMUh4BAAAAMEh5BAAAAMAg5REAAAAAg5RH\nAAAAAAxSHgEAAAAwSHkEAAAAwCDlEQAAAACDlEcAAAAADFIeAQAAADBIeQQAAADAIOURAAAAAIOU\nRwAAAAAMUh4BAAAAMEh5BAAAAMAg5REAAAAAg5RHAAAAAAxSHgEAAAAwSHkEAAAAwCDlEQAAAACD\nlEcAAAAADFIeAQAAADBIeQQAAADAIOURAAAAAIOURwAAAAAMUh4BAAAAMEh5BAAAAMAg5REAAAAA\ng5RHAAAAAAxSHgEAAAAwSHkEAAAAwCDlEQAAAACDRimPqurMqrqrqnZW1dYxMgAArCYHm19V1T+r\nqndMXr+xqjbNPiUAMI9mXh5V1boklyd5UZJTk5xXVafOOgcAwGqxxPnVK5N8trv/ZZI3Jvnl2aYE\nAObVGFcenZ5kZ3ff3d0PJbkqyTkj5AAAWC2WMr86J8lbJ8/fleQFVVUzzAgAzKkxyqMTknxq0fbu\nyRgAAMuzlPnVV/bp7oeTfC7JU2aSDgCYa9Xdsz1g1UuTnNndPzrZfkWSM7r7wn3225Jky2TzaUnu\nmmnQ2Tk2yf1jh5hTzt3KOH/L59ytjPO3fKv53H1jd28YO8S8Wsr8qqpum+yze7L9fyb73L/PZ5mD\ncTDO3co4f8vn3K2M87d8q/ncLWkOtn4WSfZxT5KNi7ZPnIx9le6+IskVswo1lqra0d2bx84xj5y7\nlXH+ls+5Wxnnb/mcOw5gKfOrvfvsrqr1SZ6Y5O/3/SBzMA7GuVsZ52/5nLuVcf6Wz7kb52trNyU5\npapOrqqjkpybZNsIOQAAVoulzK+2JTl/8vylSd7fs74EHQCYSzO/8qi7H66qC5Ncm2Rdkiu7+/ZZ\n5wAAWC2G5ldVdUmSHd29Lcmbk/x+Ve1M8pksFEwAAAc1xtfW0t3bk2wf49hHoFV/WfgUOXcr4/wt\nn3O3Ms7f8jl3DNrf/Kq7L170/EtJXjbrXEcw/31aPuduZZy/5XPuVsb5W741f+5mvmA2AAAAAPNj\njDWPAAAAAJgTyiMAAAAABimPRlJVZ1bVXVW1s6q2jp1nnlTVlVV1X1XdNnaWeVNVG6vq+qq6o6pu\nr6qLxs40T6rqcVX1kar62OT8/cLYmeZNVa2rqo9W1Z+MnWXeVNWuqvpEVd1aVTvGzgPzyhxs+czB\nls8cbGXMwVbOHGz5zMEWWPNoBFW1LslfJ/meJLuzcHvd87r7jlGDzYmq+q4kn0/ytu5+xth55klV\nHZ/k+O6+paqOTnJzkhf7z97SVFUleXx3f76qHpvkhiQXdfeHR442N6rqNUk2Jzmmu79/7DzzpKp2\nJdnc3fePnQXmlTnYypiDLZ852MqYg62cOdjymYMtcOXROE5PsrO77+7uh5JcleSckTPNje7+QBZu\nMcwh6u57u/uWyfMHk9yZ5IRxU82PXvD5yeZjJw8N/BJV1YlJzkrye2NnAdYsc7AVMAdbPnOwlTEH\nWxlzMA4H5dE4TkjyqUXbu+MfD2asqjYleVaSG8dNMl8ml/zemuS+JO/rbudv6f5rkp9K8ujYQeZU\nJ/nzqrq5qraMHQbmlDkYozMHWx5zsBUxB1sZc7Aoj2BNqqonJLk6yau7+4Gx88yT7n6ku09LcmKS\n06vKZftLUFXfn+S+7r557Cxz7Du7+9lJXpTkgsnXRwCYI+Zgy2cOtjzmYIeFOViUR2O5J8nGRdsn\nTsZg6ibfE786ydu7+91j55lX3f0PSa5PcubYWebEc5OcPfnO+FVJnl9V/33cSPOlu++Z/LwvyXuy\n8PUb4NCYgzEac7DDwxzskJmDrZA52ALl0ThuSnJKVZ1cVUclOTfJtpEzsQZMFht8c5I7u/uysfPM\nm6raUFVPmjz/51lYcPWvxk01H7r7p7v7xO7elIX/zXt/d7985Fhzo6oeP1lgNVX1+CTfm8TdjuDQ\nmYMxCnOwlTEHWz5zsJUxB/snyqMRdPfDSS5Mcm0WFst7Z3ffPm6q+VFVf5jkQ0meVlW7q+qVY2ea\nI89N8oos/MXh1snj+8YONUeOT3J9VX08C/8H5H3d7XanzMJxSW6oqo8l+UiSa7r7z0bOBHPHHGxl\nzMFWxBxsZczBGIs52ER1W6QeAAAAgP1z5REAAAAAg5RHAAAAAAxSHgEAAAAwSHkEAAAAwCDlEQAA\nAACDlEfAaKrq56vqJ8fOAQCwVph/AcuhPAIAAABgkPIImJmq+uGq+nhVfayqfn+f136sqm6avHZ1\nVX3dZPxlVXXbZPwDk7GnV9VHqurWyeedMsbvAwBwpDP/Ag6H6u6xMwBrQFU9Pcl7knxHd99fVU9O\n8hNJPt/dv1ZVT+nuv5/s+1+SfLq7f7OqPpHkzO6+p6qe1N3/UFW/meTD3f32qjoqybru/uJYvxsA\nwJHI/As4XFx5BMzK85P8UXffnyTd/Zl9Xn9GVf3lZLLyQ0mePhn/YJK3VNWPJVk3GftQktdX1euS\nfKOJCwDAfpl/AYeF8gg4UrwlyYXd/c1JfiHJ45Kku1+V5GeSbExy8+QvZH+Q5OwkX0yyvaqeP05k\nAIC59paYfwFLoDwCZuX9SV5WVU9Jksll04sdneTeqnpsFv7ylcl+T+3uG7v74iR7kmysqm9Kcnd3\n/0aS9yZ55kx+AwCA+WL+BRwW68cOAKwN3X17Vf1ikv9VVY8k+WiSXYt2+dkkN2ZhgnJjFiYzSfKr\nkwUZK8l1ST6W5HVJXlFVX07yd0l+aSa/BADAHDH/Ag4XC2YDAAAAMMjX1gAAAAAYpDwCAAAAYJDy\nCAAAAIBByiMAAAAABimPAAAAABikPAIAAABgkPIIAAAAgEH/H6S8Mi79ka96AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f0a7d749240>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "data, data_test = read_train_test_data()\n",
+    "\n",
+    "np.random.shuffle(data)\n",
+    "X_test, y_test = split_data_label(data_test)\n",
+    "\n",
+    "X_1, y_1, X_n1, y_n1 = split_class_1(data)\n",
     "pred_record = []\n",
     "y_pred = None\n",
-    "al = int(len(X_1) / 7)\n",
+    "al = int(len(X_1) / 6)\n",
     "gnb = GaussianNB()\n",
     "for i in range(6):\n",
     "    xt1 = X_1[i * al:(i + 1) * al, :]\n",
@@ -222,19 +206,48 @@
     "    y_pred_final.append(choose)\n",
     "\n",
     "acc = metrics.accuracy_score(y_test, y_pred_final)\n",
-    "print(acc)\n"
+    "print(acc)\n",
+    "\n",
+    "# 看看预测值和测试值有哪些差别\n",
+    "cnt = {}\n",
+    "test_cnt = {}\n",
+    "for i in range(y_test.shape[0]):\n",
+    "    test_cnt[y_test[i]] = test_cnt.get(y_test[i], 0) + 1\n",
+    "    if y_pred_final[i] != y_test[i]:\n",
+    "        cnt[y_test[i]] = cnt.get(y_test[i], 0) + 1\n",
+    "\n",
+    "print(cnt)\n",
+    "key = list(cnt.keys())\n",
+    "val = list(cnt.values())\n",
+    "\n",
+    "# 计算每种类别预测错误的百分比\n",
+    "err_percent = []\n",
+    "for k in test_cnt.keys():\n",
+    "    err_percent.append(cnt.get(k, 0) / test_cnt.get(k))\n",
+    "print(err_percent)\n",
+    "plt.figure(1, figsize=(20, 5))\n",
+    "plt.subplot(121)\n",
+    "plt.bar(key, val)\n",
+    "plt.xlabel('class')\n",
+    "plt.ylabel('error cnt')\n",
+    "plt.subplot(122)\n",
+    "# plt.pie(err_percent, labels=list(test_cnt.keys()), autopct='%.2f')\n",
+    "plt.bar(list(test_cnt.keys()), err_percent)\n",
+    "plt.ylabel('percent')\n",
+    "plt.xlabel('class')\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.71\n0.7\n0.62\n0.586666666667\n"
+      "0.696666666667\n0.703333333333\n0.703333333333\n0.7\n"
      ]
     }
    ],
