--- a/classification_of_satellite_images/train01.ipynb
+++ b/classification_of_satellite_images/train01.ipynb
@@ -180,7 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB"
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import MultinomialNB"
    ]
   },
   {
@@ -197,7 +198,7 @@
     }
    ],
    "source": [
-    "gnb = GaussianNB()\n",
+    "gnb = MultinomialNB()\n",
     "y_pred = gnb.fit(X_train,y_train).predict(X_test)\n",
     "acc = metrics.accuracy_score(y_test,y_pred)\n",
     "print(acc)"
