--- a/classification_of_satellite_images/10-smote.ipynb
+++ b/classification_of_satellite_images/10-smote.ipynb
@@ -70,10 +70,8 @@
     "from collections import Counter\n",
     "\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.svm import LinearSVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn import metrics\n",
-    "from sklearn.ensemble import BaggingClassifier"
+    "from sklearn import metrics"
    ]
   },
   {
